# forecast-MVC

./: .gitignore  DATABASE_SETUP.md  README.md
Models and data/: SQL Postgres water.sql  Копия Модели.ipynb
Models_and_data/: Копия Врем ряды.ipynb
backend/: .env_example.txt  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  models.py  real_data.py  schemas.py
backend/db/: database.py  import_lublino.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
frontend/src/components/: GrafanaCharStable.tsx  GrafanaChart.tsx  GrafanaTable.tsx  LLMChatWidget.tsx  RegionChatWidget.tsx  ThemeToggle.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/modules/: App.tsx
frontend/src/modules/auth/: LoginPage.tsx  UserInfo.tsx
frontend/src/modules/dashboard/: DashboardPage.tsx
frontend/src/modules/house/: HouseDetailPage.tsx  HouseSummaryPage.tsx
frontend/src/modules/status/: StatusListPage.tsx
frontend/src/utils/: grafana.ts
